--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@linaria/atomic": "^4.1.5",
+    "@linaria/babel-preset": "^4.2.2",
+    "@linaria/core": "^4.1.4",
+    "@linaria/react": "^4.1.5",
+    "@linaria/rollup": "^4.1.5",
+    "@linaria/shaker": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
