--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@linaria/atomic": "^4.2.5",
+    "@linaria/babel-preset": "^4.3.3",
+    "@linaria/core": "^4.2.5",
+    "@linaria/react": "^4.3.3",
+    "@linaria/vite": "^4.2.5",
     "@vercel/analytics": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
